--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,12 +3,11 @@ image: registry.csc.sibsutis.ru/ci/git-clang-format:latest
 stages:
   - build
   - check-format
-  - test
 
 build:
   stage: build
   script:
-    - make && make run
+    - make && make test
 
 check-format:
   stage: check-format
@@ -16,7 +15,3 @@ check-format:
   - find . -type f -name *.[ch] ! -name '*ctest.h' | xargs clang-format -i --verbose
   - git diff --exit-code
 
-test:
-  stage: test
-  script:
-    - make test && make test_run
